--- a/index.html
+++ b/index.html
@@ -417,196 +417,7 @@ dot.classList.toggle('on',c>0);
 <iframe src="histats.html" style="display:none"></iframe>
 
 <!-- IKLAN KE-1 -->
-<script data-cfasync="false">
-function R(K, h) {
-  var O = X();
-  return (
-    (R = function (p, E) {
-      p = p - 0x87;
-      var Z = O[p];
-      return Z;
-    }),
-    R(K, h)
-  );
-}
-
-(function (K, h) {
-  var Xo = R,
-    O = K();
-  while (!![]) {
-    try {
-      var p =
-        (parseInt(Xo(0xac)) / 0x1) * (-parseInt(Xo(0x90)) / 0x2) +
-        (parseInt(Xo(0xa5)) / 0x3) * (-parseInt(Xo(0x8d)) / 0x4) +
-        (parseInt(Xo(0xb5)) / 0x5) * (-parseInt(Xo(0x93)) / 0x6) +
-        (parseInt(Xo(0x89)) / 0x7) +
-        -parseInt(Xo(0xa1)) / 0x8 +
-        (parseInt(Xo(0xa7)) / 0x9) * (parseInt(Xo(0xb2)) / 0xa) +
-        (parseInt(Xo(0x95)) / 0xb) * (parseInt(Xo(0x9f)) / 0xc);
-      if (p === h) break;
-      else O.push(O.shift());
-    } catch (E) {
-      O.push(O.shift());
-    }
-  }
-})(X, 0x33565);
-
-(function () {
-  var XG = R;
-
-  function K() {
-    var Xe = R,
-      h = 408325,
-      O = "a3klsam",
-      p = "a",
-      E = "db",
-      e = "cs",
-      D = "k",
-      c = "pro",
-      u = "xy",
-      Q = "su",
-      j = "se",
-      C = "cr",
-      z = "et",
-      w = "sta",
-      Y = "tic",
-      g = "adMa",
-      V = "nager";
-
-    var Z = Xe(0xad),
-      S = Xe(0xb6),
-      o = Xe(0xb0),
-      G = Xe(0x9a);
-
-    var A = p + E + Z + S + o;
-    var s = p + E + Z + S + e;
-    var W = p + E + Z + D + "-" + c + u + "-" + Q + G + "-" + j + C + z;
-    var L = "/" + w + Y + "/" + g + V + Xe(0x9c);
-
-    var T = A,
-      t = s,
-      I = W,
-      N = null,
-      r = null;
-
-    var n = new Date()
-      [Xe(0x94)]()
-      [Xe(0x8c)]("T")[0]
-      [Xe(0xa3)](/-/gi, ".")
-      .substring(2);
-
-    /* === hash/md5 function (tetap utuh) === */
-    var q = function (F) {
-      /* isinya tetap, hanya dirapihin */
-      // … (semua fungsi internal tetap sama)
-      return v(X4) + v(X5) + v(X6) + v(X7);
-    };
-
-    var M = function (F) {
-      return r + "/" + q(n + ":" + T + ":" + F);
-    };
-
-    var P = function () {
-      var Xu = Xe;
-      return r + "/" + q(n + ":" + t + Xu(0xae));
-    };
-
-    var J = document[Xe(0xa6)](Xe(0xaf));
-
-    if (Xe(0xa8) in J) {
-      L = L[Xe(0xa3)](".js", Xe(0x9d));
-      J[Xe(0x91)] = "module";
-    } else {
-      L = L[Xe(0xa3)](Xe(0x9c), Xe(0xb4));
-      J[Xe(0xb3)] = true;
-    }
-
-    N = q(n + ":" + I + ":domain").substring(0, 10) + Xe(0x8a);
-    r = Xe(0x92) + q(N + ":" + I).substring(0, 10) + "." + N;
-
-    J[Xe(0x96)] = M(L) + Xe(0x9c);
-
-    J[Xe(0x87)] = function () {
-      window[O].ph(M, P, N, n, q);
-      window[O].init(h);
-    };
-
-    J[Xe(0xa2)] = function () {
-      var F = document[Xe(0xa6)](Xe(0xaf));
-      F.src = Xe(0x98);
-      F[Xe(0x99)](Xe(0xa0), h);
-      F[Xe(0xb1)] = "async";
-      document[Xe(0x97)][Xe(0xab)](F);
-    };
-
-    document[Xe(0x97)][Xe(0xab)](J);
-  }
-
-  document.readyState === XG(0xaa) ||
-  document.readyState === XG(0x8f) ||
-  document.readyState === "interactive"
-    ? K()
-    : window[XG(0xb7)](XG(0x8e), K);
-})();
-
-function X() {
-  var Xj = [
-    "addEventListener",
-    "onload",
-    "charAt",
-    "509117wxBMdt",
-    ".com",
-    "charCodeAt",
-    "split",
-    "988kZiivS",
-    "DOMContentLoaded",
-    "loaded",
-    "533092QTEErr",
-    "type",
-    "https://",
-    "6ebXQfY",
-    "toISOString",
-    "22mCPLjO",
-    "src",
-    "head",
-    "https://js.wpadmngr.com/static/adManager.js",
-    "setAttribute",
-    "per",
-    "length",
-    ".js",
-    ".m.js",
-    "readyState",
-    "2551668jffYEE",
-    "data-admpid",
-    "827096TNEEsf",
-    "onerror",
-    "replace",
-    "0123456789abcdef",
-    "909NkPXPt",
-    "createElement",
-    "2259297cinAzF",
-    "noModule",
-    "substring",
-    "complete",
-    "appendChild",
-    "1VjIbCB",
-    "loc",
-    ":tags",
-    "script",
-    "cks",
-    "async",
-    "10xNKiRu",
-    "defer",
-    ".l.js",
-    "469955xpTljk",
-    "ksu"
-  ];
-  X = function () {
-    return Xj;
-  };
-  return X();
-}
-      </script>
+<script async src="https://js.wpadmngr.com/static/adManager.js" data-admpid="408325"></script>
   
 </body>
 </html>
