--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ dot.classList.toggle('on',c>0);
 <iframe src="histats.html" style="display:none"></iframe>
 
 <!-- IKLAN KE-1 -->
-<script async src="https://js.wpadmngr.com/static/adManager.js" data-admpid="408325"></script>
+<script data-cfasync="false" async type="text/javascript" src="//sl.moutonstumeric.com/rr9DV67NkrHeRj/131146"></script>
   
 </body>
 </html>
