--- a/note.html
+++ b/note.html
@@ -2,101 +2,270 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Note</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Note Editor</title>
+
 <style>
 body{
   margin:0;
-  background:#0b0b0b;
-  color:#fff;
+  background:#f3f4f6;
   font-family:system-ui,Arial;
 }
-.container{
-  max-width:600px;
-  margin:auto;
-  padding:16px;
+.wrap{
+  max-width:720px;
+  margin:20px auto;
+  background:#fff;
+  border-radius:8px;
+  box-shadow:0 2px 10px rgba(0,0,0,.1);
+  overflow:hidden;
 }
-h1{margin-bottom:12px}
-textarea{
+.header{
+  padding:12px;
+  border-bottom:1px solid #ddd;
+}
+.header input{
   width:100%;
-  height:150px;
-  background:#111;
-  color:#fff;
-  border:1px solid #333;
-  border-radius:8px;
+  font-size:18px;
   padding:10px;
-  resize:none;
+  border:1px solid #ccc;
+  border-radius:6px;
 }
-button{
-  margin-top:10px;
-  padding:10px 14px;
-  background:#2563eb;
-  color:#fff;
+.tabs{
+  display:flex;
+  justify-content:flex-end;
+  border-bottom:1px solid #ddd;
+}
+.tab{
+  padding:8px 14px;
+  cursor:pointer;
+  font-weight:600;
+  background:#e5e7eb;
+  color:#555;
+}
+.tab.active{
+  background:#fff;
+  color:#dc2626;
+  border-bottom:2px solid #dc2626;
+}
+.toolbar{
+  display:flex;
+  gap:10px;
+  padding:8px 10px;
+  border-bottom:1px solid #ddd;
+}
+.toolbar button{
+  background:none;
   border:none;
-  border-radius:8px;
+  padding:6px;
+  border-radius:6px;
   cursor:pointer;
 }
-.list{
-  margin-top:20px;
+.toolbar button:hover{
+  background:#e5e7eb;
 }
-.item{
-  background:#111;
-  padding:10px;
-  border-radius:8px;
-  margin-bottom:8px;
+.toolbar svg{
+  width:20px;
+  height:20px;
+  stroke:#111;
+}
+.editor{
+  min-height:320px;
+  padding:14px;
+  outline:none;
+  border:2px solid #2563eb;
+  margin:10px;
+  border-radius:6px;
+}
+textarea{
+  display:none;
+  width:calc(100% - 20px);
+  height:320px;
+  margin:10px;
+}
+.footer{
   display:flex;
-  justify-content:space-between;
-  align-items:center;
+  justify-content:center;
+  gap:10px;
+  padding:12px;
+  border-top:1px solid #ddd;
 }
-.item a{
-  color:#60a5fa;
+select,button.publish{
+  padding:8px 14px;
+  border-radius:6px;
+  border:none;
+  font-weight:600;
+}
+button.publish{
+  background:#dc2626;
+  color:#fff;
+}
+.section{
+  max-width:720px;
+  margin:20px auto;
+}
+.card{
+  background:#fff;
+  padding:12px;
+  border-radius:8px;
+  margin-bottom:10px;
+  box-shadow:0 2px 8px rgba(0,0,0,.08);
+}
+.card a{
+  color:#2563eb;
   text-decoration:none;
+  word-break:break-all;
 }
-small{color:#888}
+small{color:#666}
 </style>
 </head>
 <body>
 
-<div class="container">
-  <h1>📝 Note</h1>
+<div class="wrap">
+  <div class="header">
+    <input id="title" placeholder="Title">
+  </div>
 
-  <textarea id="note" placeholder="Tulis catatan..."></textarea>
-  <button onclick="saveNote()">Simpan</button>
+  <div class="tabs">
+    <div class="tab active" onclick="showEditor()">EDITOR</div>
+    <div class="tab" onclick="showHTML()">HTML</div>
+  </div>
 
-  <div class="list" id="list"></div>
+  <div class="toolbar">
+    <!-- Bold -->
+    <button onclick="cmd('bold')" title="Bold">
+      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+        <path d="M6 4h7a4 4 0 0 1 0 8H6z"/>
+        <path d="M6 12h8a4 4 0 0 1 0 8H6z"/>
+      </svg>
+    </button>
+
+    <!-- Align -->
+    <button onclick="cmd('justifyLeft')" title="Align Left">
+      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+        <line x1="3" y1="6" x2="21" y2="6"/>
+        <line x1="3" y1="12" x2="15" y2="12"/>
+        <line x1="3" y1="18" x2="21" y2="18"/>
+      </svg>
+    </button>
+
+    <!-- Image -->
+    <button onclick="insertImage()" title="Image">
+      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+        <rect x="3" y="3" width="18" height="18" rx="2"/>
+        <circle cx="8" cy="8" r="2"/>
+        <path d="M21 15l-5-5L5 21"/>
+      </svg>
+    </button>
+
+    <!-- Link -->
+    <button onclick="insertLink()" title="Link">
+      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+        <path d="M10 13a5 5 0 0 1 0-7l2-2a5 5 0 0 1 7 7l-1 1"/>
+        <path d="M14 11a5 5 0 0 1 0 7l-2 2a5 5 0 0 1-7-7l1-1"/>
+      </svg>
+    </button>
+
+    <!-- List -->
+    <button onclick="cmd('insertUnorderedList')" title="List">
+      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+        <line x1="8" y1="6" x2="21" y2="6"/>
+        <line x1="8" y1="12" x2="21" y2="12"/>
+        <line x1="8" y1="18" x2="21" y2="18"/>
+        <circle cx="4" cy="6" r="1"/>
+        <circle cx="4" cy="12" r="1"/>
+        <circle cx="4" cy="18" r="1"/>
+      </svg>
+    </button>
+
+    <!-- Undo -->
+    <button onclick="cmd('undo')" title="Undo">
+      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+        <path d="M9 14l-4-4 4-4"/>
+        <path d="M20 20a8 8 0 0 0-8-8H5"/>
+      </svg>
+    </button>
+
+    <!-- More -->
+    <button title="More">
+      <svg viewBox="0 0 24 24" fill="currentColor">
+        <circle cx="5" cy="12" r="2"/>
+        <circle cx="12" cy="12" r="2"/>
+        <circle cx="19" cy="12" r="2"/>
+      </svg>
+    </button>
+  </div>
+
+  <div id="editor" class="editor" contenteditable="true"></div>
+  <textarea id="html"></textarea>
+
+  <div class="footer">
+    <select>
+      <option>Public</option>
+    </select>
+    <button class="publish" onclick="publish()">Publish</button>
+  </div>
+</div>
+
+<div class="section">
+  <h3>Hasil Link</h3>
+  <div id="links"></div>
+</div>
+
+<div class="section">
+  <h3>History</h3>
+  <div id="history"></div>
 </div>
 
 <script>
 let notes = JSON.parse(localStorage.getItem('notes') || '[]');
 
-function saveNote(){
-  const text = note.value.trim();
-  if(!text) return;
-  notes.push({
-    id: Date.now(),
-    text: text
+function cmd(c){document.execCommand(c,false,null)}
+function insertLink(){
+  const u=prompt('URL');
+  if(u) document.execCommand('createLink',false,u);
+}
+function insertImage(){
+  const u=prompt('Image URL');
+  if(u) document.execCommand('insertImage',false,u);
+}
+function showHTML(){
+  html.value=editor.innerHTML;
+  editor.style.display='none';
+  html.style.display='block';
+  setTab(1);
+}
+function showEditor(){
+  editor.innerHTML=html.value;
+  html.style.display='none';
+  editor.style.display='block';
+  setTab(0);
+}
+function setTab(i){
+  document.querySelectorAll('.tab').forEach((t,n)=>{
+    t.classList.toggle('active',n===i);
   });
-  localStorage.setItem('notes', JSON.stringify(notes));
-  note.value='';
+}
+function publish(){
+  notes.unshift({
+    id:Date.now(),
+    title:title.value||'Untitled',
+    content:editor.innerHTML,
+    time:new Date().toLocaleString()
+  });
+  localStorage.setItem('notes',JSON.stringify(notes));
   render();
 }
-
 function render(){
-  list.innerHTML='';
+  links.innerHTML='';
+  history.innerHTML='';
   notes.forEach(n=>{
-    const div = document.createElement('div');
-    div.className='item';
-    div.innerHTML = `
-      <div>
-        <small>${new Date(n.id).toLocaleString()}</small><br>
-        ${n.text.slice(0,40)}...
-      </div>
-      <a href="v/view.html?id=${n.id}">Buka</a>
-    `;
-    list.appendChild(div);
+    const link=`v/view.html?id=${n.id}`;
+    links.innerHTML+=`
+      <div class="card"><a href="${link}" target="_blank">${link}</a></div>`;
+    history.innerHTML+=`
+      <div class="card"><b>${n.title}</b><br><small>${n.time}</small></div>`;
   });
 }
-
 render();
 </script>
 
