--- a/note.html
+++ b/note.html
@@ -6,123 +6,76 @@
 <title>Note Editor</title>
 
 <style>
-body{
-  margin:0;
-  background:#f3f4f6;
-  font-family:system-ui,Arial;
-}
-.wrap{
-  max-width:720px;
-  margin:20px auto;
-  background:#fff;
-  border-radius:8px;
-  box-shadow:0 2px 10px rgba(0,0,0,.1);
-  overflow:hidden;
-}
-.header{
-  padding:12px;
-  border-bottom:1px solid #ddd;
-}
-.header input{
+body{margin:0;background:#f3f4f6;font-family:system-ui}
+.wrap{max-width:720px;margin:12px auto;background:#fff;border-radius:8px;box-shadow:0 2px 10px rgba(0,0,0,.1)}
+.header{padding:10px;border-bottom:1px solid #ddd}
+.header textarea{
   width:100%;
+  resize:none;
   font-size:18px;
-  padding:10px;
+  padding:8px;
   border:1px solid #ccc;
   border-radius:6px;
 }
-.tabs{
-  display:flex;
-  justify-content:flex-end;
-  border-bottom:1px solid #ddd;
-}
-.tab{
-  padding:8px 14px;
-  cursor:pointer;
-  font-weight:600;
-  background:#e5e7eb;
-  color:#555;
-}
-.tab.active{
-  background:#fff;
-  color:#dc2626;
-  border-bottom:2px solid #dc2626;
-}
+.tabs{display:flex;justify-content:flex-end;border-bottom:1px solid #ddd}
+.tab{padding:8px 14px;cursor:pointer;background:#e5e7eb;font-weight:600}
+.tab.active{background:#fff;color:#dc2626;border-bottom:2px solid #dc2626}
+
 .toolbar{
   display:flex;
-  gap:10px;
-  padding:8px 10px;
-  border-bottom:1px solid #ddd;
+  flex-wrap:wrap;
+  gap:6px;
+  padding:8px;
+  border-bottom:1px solid #ddd
 }
-.toolbar button{
-  background:none;
-  border:none;
+.toolbar select,.toolbar button{
   padding:6px;
   border-radius:6px;
-  cursor:pointer;
+  border:1px solid #ccc;
+  background:#fff
 }
-.toolbar button:hover{
-  background:#e5e7eb;
-}
-.toolbar svg{
-  width:20px;
-  height:20px;
-  stroke:#111;
-}
+.toolbar button svg{width:18px;height:18px}
+
 .editor{
-  min-height:320px;
-  padding:14px;
-  outline:none;
+  min-height:300px;
+  padding:12px;
   border:2px solid #2563eb;
   margin:10px;
   border-radius:6px;
+  outline:none
 }
-textarea{
-  display:none;
-  width:calc(100% - 20px);
-  height:320px;
-  margin:10px;
-}
+textarea.html{display:none;width:calc(100% - 20px);height:300px;margin:10px}
+
 .footer{
   display:flex;
+  gap:8px;
   justify-content:center;
-  gap:10px;
-  padding:12px;
-  border-top:1px solid #ddd;
+  padding:10px;
+  border-top:1px solid #ddd
 }
-select,button.publish{
-  padding:8px 14px;
-  border-radius:6px;
-  border:none;
-  font-weight:600;
-}
-button.publish{
-  background:#dc2626;
-  color:#fff;
-}
-.section{
-  max-width:720px;
-  margin:20px auto;
-}
+button.publish{background:#dc2626;color:#fff;border:none;padding:8px 14px;border-radius:6px}
+
+.section{max-width:720px;margin:16px auto}
 .card{
   background:#fff;
-  padding:12px;
+  padding:10px;
   border-radius:8px;
-  margin-bottom:10px;
-  box-shadow:0 2px 8px rgba(0,0,0,.08);
+  box-shadow:0 2px 6px rgba(0,0,0,.08);
+  margin-bottom:8px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  gap:8px
 }
-.card a{
-  color:#2563eb;
-  text-decoration:none;
-  word-break:break-all;
-}
-small{color:#666}
+.card small{color:#666}
+.actions button{margin-left:6px}
 </style>
 </head>
 <body>
 
 <div class="wrap">
   <div class="header">
-    <input id="title" placeholder="Title">
+    <textarea id="title" rows="1" placeholder="Title"></textarea>
   </div>
 
   <div class="tabs">
@@ -131,77 +84,37 @@ small{color:#666}
   </div>
 
   <div class="toolbar">
-    <!-- Bold -->
-    <button onclick="cmd('bold')" title="Bold">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-        <path d="M6 4h7a4 4 0 0 1 0 8H6z"/>
-        <path d="M6 12h8a4 4 0 0 1 0 8H6z"/>
-      </svg>
-    </button>
+    <select onchange="cmd('fontName',this.value)">
+      <option value="Arial">Sans</option>
+      <option value="Georgia">Serif</option>
+      <option value="monospace">Mono</option>
+    </select>
 
-    <!-- Align -->
-    <button onclick="cmd('justifyLeft')" title="Align Left">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-        <line x1="3" y1="6" x2="21" y2="6"/>
-        <line x1="3" y1="12" x2="15" y2="12"/>
-        <line x1="3" y1="18" x2="21" y2="18"/>
-      </svg>
-    </button>
+    <select onchange="cmd('formatBlock',this.value)">
+      <option value="p">Paragraph</option>
+      <option value="h1">H1</option>
+      <option value="h2">H2</option>
+      <option value="h3">H3</option>
+    </select>
 
-    <!-- Image -->
-    <button onclick="insertImage()" title="Image">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-        <rect x="3" y="3" width="18" height="18" rx="2"/>
-        <circle cx="8" cy="8" r="2"/>
-        <path d="M21 15l-5-5L5 21"/>
-      </svg>
-    </button>
+    <button onclick="cmd('bold')"><b>B</b></button>
+    <button onclick="cmd('insertUnorderedList')">•</button>
+    <button onclick="cmd('justifyLeft')">≡</button>
+    <button onclick="cmd('undo')">↶</button>
 
-    <!-- Link -->
-    <button onclick="insertLink()" title="Link">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-        <path d="M10 13a5 5 0 0 1 0-7l2-2a5 5 0 0 1 7 7l-1 1"/>
-        <path d="M14 11a5 5 0 0 1 0 7l-2 2a5 5 0 0 1-7-7l1-1"/>
-      </svg>
-    </button>
-
-    <!-- List -->
-    <button onclick="cmd('insertUnorderedList')" title="List">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-        <line x1="8" y1="6" x2="21" y2="6"/>
-        <line x1="8" y1="12" x2="21" y2="12"/>
-        <line x1="8" y1="18" x2="21" y2="18"/>
-        <circle cx="4" cy="6" r="1"/>
-        <circle cx="4" cy="12" r="1"/>
-        <circle cx="4" cy="18" r="1"/>
-      </svg>
-    </button>
-
-    <!-- Undo -->
-    <button onclick="cmd('undo')" title="Undo">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-        <path d="M9 14l-4-4 4-4"/>
-        <path d="M20 20a8 8 0 0 0-8-8H5"/>
-      </svg>
-    </button>
-
-    <!-- More -->
-    <button title="More">
-      <svg viewBox="0 0 24 24" fill="currentColor">
-        <circle cx="5" cy="12" r="2"/>
-        <circle cx="12" cy="12" r="2"/>
-        <circle cx="19" cy="12" r="2"/>
-      </svg>
-    </button>
+    <button onclick="pickImage()">🖼</button>
+    <input type="file" id="imgPick" accept="image/*" hidden>
   </div>
 
-  <div id="editor" class="editor" contenteditable="true"></div>
-  <textarea id="html"></textarea>
+  <div id="editor" class="editor" contenteditable></div>
+  <textarea id="html" class="html"></textarea>
 
   <div class="footer">
-    <select>
-      <option>Public</option>
+    <select id="visibility">
+      <option value="public">Public</option>
+      <option value="password">Password</option>
     </select>
+    <input id="pass" placeholder="Password" style="display:none">
     <button class="publish" onclick="publish()">Publish</button>
   </div>
 </div>
@@ -217,17 +130,16 @@ small{color:#666}
 </div>
 
 <script>
-let notes = JSON.parse(localStorage.getItem('notes') || '[]');
+const titleEl=document.getElementById('title');
+titleEl.addEventListener('input',()=>{titleEl.style.height='auto';titleEl.style.height=titleEl.scrollHeight+'px'});
 
-function cmd(c){document.execCommand(c,false,null)}
-function insertLink(){
-  const u=prompt('URL');
-  if(u) document.execCommand('createLink',false,u);
+let notes=JSON.parse(localStorage.getItem('notes')||'[]');
+
+function idGen(){
+  return Math.random().toString(36).substring(2,7);
 }
-function insertImage(){
-  const u=prompt('Image URL');
-  if(u) document.execCommand('insertImage',false,u);
-}
+function cmd(c,v=null){document.execCommand(c,false,v)}
+
 function showHTML(){
   html.value=editor.innerHTML;
   editor.style.display='none';
@@ -241,33 +153,64 @@ function showEditor(){
   setTab(0);
 }
 function setTab(i){
-  document.querySelectorAll('.tab').forEach((t,n)=>{
-    t.classList.toggle('active',n===i);
-  });
+  document.querySelectorAll('.tab').forEach((t,n)=>t.classList.toggle('active',n===i));
 }
+
+visibility.onchange=()=>pass.style.display=visibility.value==='password'?'block':'none';
+
+function pickImage(){imgPick.click()}
+imgPick.onchange=e=>{
+  const file=e.target.files[0];
+  if(!file)return;
+  const r=new FileReader();
+  r.onload=()=>document.execCommand('insertImage',false,r.result);
+  r.readAsDataURL(file);
+}
+
 function publish(){
+  const id=idGen();
   notes.unshift({
-    id:Date.now(),
-    title:title.value||'Untitled',
+    id,
+    title:titleEl.value||'Untitled',
     content:editor.innerHTML,
-    time:new Date().toLocaleString()
+    time:new Date().toLocaleString(),
+    password:visibility.value==='password'?pass.value:''
   });
   localStorage.setItem('notes',JSON.stringify(notes));
   render();
 }
+
+function copy(text){navigator.clipboard.writeText(text)}
+
 function render(){
   links.innerHTML='';
   history.innerHTML='';
   notes.forEach(n=>{
-    const link=`v/view.html?id=${n.id}`;
+    const url=`v/view.html?id=${n.id}`;
     links.innerHTML+=`
-      <div class="card"><a href="${link}" target="_blank">${link}</a></div>`;
+      <div class="card">
+        <small>${url}</small>
+        <button onclick="copy('${url}')">Salin</button>
+      </div>`;
     history.innerHTML+=`
-      <div class="card"><b>${n.title}</b><br><small>${n.time}</small></div>`;
+      <div class="card">
+        <div>
+          <b>${n.title}</b><br><small>${n.time}</small>
+        </div>
+        <div class="actions">
+          <button onclick="open('${url}')">Lihat</button>
+          <button onclick="copy('${url}')">Salin</button>
+          <button onclick="del('${n.id}')">Hapus</button>
+        </div>
+      </div>`;
   });
+}
+function del(id){
+  notes=notes.filter(n=>n.id!==id);
+  localStorage.setItem('notes',JSON.stringify(notes));
+  render();
 }
 render();
 </script>
-
 </body>
 </html>
