--- a/note.html
+++ b/note.html
@@ -3,120 +3,130 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Note Editor</title>
+<title>Note</title>
 
 <style>
-body{margin:0;background:#f3f4f6;font-family:system-ui}
-.wrap{max-width:720px;margin:12px auto;background:#fff;border-radius:8px;box-shadow:0 2px 10px rgba(0,0,0,.1)}
-.header{padding:10px;border-bottom:1px solid #ddd}
-.header textarea{
+*{box-sizing:border-box;font-family:system-ui,-apple-system,Segoe UI,Roboto}
+body{margin:0;background:#f5f5f5;color:#111}
+.container{max-width:700px;margin:auto;padding:12px}
+
+.title-input{
   width:100%;
-  resize:none;
-  font-size:18px;
-  padding:8px;
-  border:1px solid #ccc;
-  border-radius:6px;
+  padding:10px 12px;
+  font-size:16px;
+  border:1px solid #ddd;
+  border-radius:8px;
+  margin-bottom:10px;
 }
-.tabs{display:flex;justify-content:flex-end;border-bottom:1px solid #ddd}
-.tab{padding:8px 14px;cursor:pointer;background:#e5e7eb;font-weight:600}
-.tab.active{background:#fff;color:#dc2626;border-bottom:2px solid #dc2626}
 
 .toolbar{
   display:flex;
-  flex-wrap:wrap;
   gap:6px;
-  padding:8px;
-  border-bottom:1px solid #ddd
+  flex-wrap:wrap;
+  margin-bottom:6px;
 }
-.toolbar select,.toolbar button{
-  padding:6px;
+.toolbar button{
+  width:36px;
+  height:36px;
+  border:1px solid #ddd;
+  background:#fff;
   border-radius:6px;
-  border:1px solid #ccc;
-  background:#fff
+  display:flex;
+  align-items:center;
+  justify-content:center;
 }
-.toolbar button svg{width:18px;height:18px}
+.toolbar svg{
+  width:18px;
+  height:18px;
+  stroke:#111;
+  fill:none;
+  stroke-width:1.8;
+}
 
 .editor{
-  min-height:300px;
-  padding:12px;
-  border:2px solid #2563eb;
-  margin:10px;
-  border-radius:6px;
-  outline:none
+  min-height:220px;
+  border:2px solid #4a90e2;
+  border-radius:10px;
+  padding:10px;
+  background:#fff;
+  overflow:auto;
 }
-textarea.html{display:none;width:calc(100% - 20px);height:300px;margin:10px}
+.editor img{
+  max-width:100%;
+  height:auto;
+  display:block;
+  margin:8px auto;
+  border-radius:6px;
+}
 
-.footer{
+.actions{
   display:flex;
   gap:8px;
-  justify-content:center;
-  padding:10px;
-  border-top:1px solid #ddd
+  margin-top:10px;
 }
-button.publish{background:#dc2626;color:#fff;border:none;padding:8px 14px;border-radius:6px}
+select,button.publish{
+  padding:8px 12px;
+  border-radius:8px;
+  border:1px solid #ddd;
+}
+button.publish{
+  background:#e53935;
+  color:#fff;
+  border:none;
+}
 
-.section{max-width:720px;margin:16px auto}
+.section{margin-top:18px}
 .card{
   background:#fff;
-  padding:10px;
   border-radius:8px;
-  box-shadow:0 2px 6px rgba(0,0,0,.08);
-  margin-bottom:8px;
+  padding:10px;
   display:flex;
   justify-content:space-between;
   align-items:center;
-  gap:8px
+  margin-top:6px;
+  gap:10px;
 }
-.card small{color:#666}
-.actions button{margin-left:6px}
+.card span{font-size:13px;word-break:break-all}
+.card button{
+  padding:6px 10px;
+  border-radius:6px;
+  border:1px solid #ddd;
+  background:#fafafa;
+}
 </style>
 </head>
+
 <body>
+<div class="container">
 
-<div class="wrap">
-  <div class="header">
-    <textarea id="title" rows="1" placeholder="Title"></textarea>
-  </div>
+<input id="title" class="title-input" placeholder="Title">
 
-  <div class="tabs">
-    <div class="tab active" onclick="showEditor()">EDITOR</div>
-    <div class="tab" onclick="showHTML()">HTML</div>
-  </div>
+<div class="toolbar">
+  <button onclick="cmd('bold')">
+    <svg viewBox="0 0 24 24"><path d="M7 4h6a4 4 0 010 8H7z"/><path d="M7 12h7a4 4 0 010 8H7z"/></svg>
+  </button>
 
-  <div class="toolbar">
-    <select onchange="cmd('fontName',this.value)">
-      <option value="Arial">Sans</option>
-      <option value="Georgia">Serif</option>
-      <option value="monospace">Mono</option>
-    </select>
+  <button onclick="cmd('italic')">
+    <svg viewBox="0 0 24 24"><line x1="19" y1="4" x2="10" y2="4"/><line x1="14" y1="20" x2="5" y2="20"/><line x1="15" y1="4" x2="9" y2="20"/></svg>
+  </button>
 
-    <select onchange="cmd('formatBlock',this.value)">
-      <option value="p">Paragraph</option>
-      <option value="h1">H1</option>
-      <option value="h2">H2</option>
-      <option value="h3">H3</option>
-    </select>
+  <button onclick="cmd('underline')">
+    <svg viewBox="0 0 24 24"><path d="M6 4v6a6 6 0 0012 0V4"/><line x1="4" y1="20" x2="20" y2="20"/></svg>
+  </button>
 
-    <button onclick="cmd('bold')"><b>B</b></button>
-    <button onclick="cmd('insertUnorderedList')">•</button>
-    <button onclick="cmd('justifyLeft')">≡</button>
-    <button onclick="cmd('undo')">↶</button>
+  <button onclick="insertImage()">
+    <svg viewBox="0 0 24 24"><rect x="3" y="3" width="18" height="18" rx="2"/><circle cx="9" cy="9" r="2"/><path d="M21 17l-5-5-4 4-2-2-5 5"/></svg>
+  </button>
+</div>
 
-    <button onclick="pickImage()">🖼</button>
-    <input type="file" id="imgPick" accept="image/*" hidden>
-  </div>
+<div id="editor" class="editor" contenteditable></div>
 
-  <div id="editor" class="editor" contenteditable></div>
-  <textarea id="html" class="html"></textarea>
-
-  <div class="footer">
-    <select id="visibility">
-      <option value="public">Public</option>
-      <option value="password">Password</option>
-    </select>
-    <input id="pass" placeholder="Password" style="display:none">
-    <button class="publish" onclick="publish()">Publish</button>
-  </div>
+<div class="actions">
+  <select id="visibility">
+    <option value="public">Public</option>
+    <option value="password">Password</option>
+  </select>
+  <button class="publish" onclick="publish()">Publish</button>
 </div>
 
 <div class="section">
@@ -129,87 +139,91 @@ button.publish{background:#dc2626;color:#fff;border:none;padding:8px 14px;border
   <div id="history"></div>
 </div>
 
+</div>
+
+<input type="file" id="imgPicker" accept="image/*" hidden>
+
 <script>
-const titleEl=document.getElementById('title');
-titleEl.addEventListener('input',()=>{titleEl.style.height='auto';titleEl.style.height=titleEl.scrollHeight+'px'});
+const editor = document.getElementById("editor");
+const imgPicker = document.getElementById("imgPicker");
+const links = document.getElementById("links");
+const historyBox = document.getElementById("history");
 
-let notes=JSON.parse(localStorage.getItem('notes')||'[]');
+let notes = JSON.parse(localStorage.getItem("notes")||"[]");
 
-function idGen(){
-  return Math.random().toString(36).substring(2,7);
-}
-function cmd(c,v=null){document.execCommand(c,false,v)}
+function cmd(c){document.execCommand(c,false,null);}
 
-function showHTML(){
-  html.value=editor.innerHTML;
-  editor.style.display='none';
-  html.style.display='block';
-  setTab(1);
-}
-function showEditor(){
-  editor.innerHTML=html.value;
-  html.style.display='none';
-  editor.style.display='block';
-  setTab(0);
-}
-function setTab(i){
-  document.querySelectorAll('.tab').forEach((t,n)=>t.classList.toggle('active',n===i));
+function insertImage(){
+  imgPicker.click();
 }
 
-visibility.onchange=()=>pass.style.display=visibility.value==='password'?'block':'none';
-
-function pickImage(){imgPick.click()}
-imgPick.onchange=e=>{
-  const file=e.target.files[0];
-  if(!file)return;
+imgPicker.onchange=e=>{
+  const f=e.target.files[0];
+  if(!f) return;
   const r=new FileReader();
-  r.onload=()=>document.execCommand('insertImage',false,r.result);
-  r.readAsDataURL(file);
+  r.onload=()=>{
+    document.execCommand("insertImage",false,r.result);
+  }
+  r.readAsDataURL(f);
+}
+
+function genID(){
+  return Math.random().toString(36).slice(2,7);
 }
 
 function publish(){
-  const id=idGen();
-  notes.unshift({
-    id,
-    title:titleEl.value||'Untitled',
+  let pass="";
+  if(visibility.value==="password"){
+    pass=prompt("Masukkan password");
+  }
+
+  const note={
+    id:genID(),
+    title:title.value||"(No Title)",
     content:editor.innerHTML,
     time:new Date().toLocaleString(),
-    password:visibility.value==='password'?pass.value:''
-  });
-  localStorage.setItem('notes',JSON.stringify(notes));
+    password:pass
+  };
+
+  notes.unshift(note);
+  localStorage.setItem("notes",JSON.stringify(notes));
   render();
 }
-
-function copy(text){navigator.clipboard.writeText(text)}
 
 function render(){
-  links.innerHTML='';
-  history.innerHTML='';
-  notes.forEach(n=>{
+  links.innerHTML="";
+  historyBox.innerHTML="";
+
+  notes.forEach((n,i)=>{
     const url=`v/view.html?id=${n.id}`;
-    links.innerHTML+=`
-      <div class="card">
-        <small>${url}</small>
-        <button onclick="copy('${url}')">Salin</button>
-      </div>`;
-    history.innerHTML+=`
+
+    if(i===0){
+      links.innerHTML=`
+        <div class="card">
+          <span>${url}</span>
+          <button onclick="copy('${url}')">Salin</button>
+        </div>`;
+    }
+
+    historyBox.innerHTML+=`
       <div class="card">
         <div>
-          <b>${n.title}</b><br><small>${n.time}</small>
+          <b>${n.title}</b><br>
+          <small>${n.time}</small>
         </div>
-        <div class="actions">
-          <button onclick="open('${url}')">Lihat</button>
-          <button onclick="copy('${url}')">Salin</button>
-          <button onclick="del('${n.id}')">Hapus</button>
-        </div>
+        <button onclick="openLink('${url}')">Buka</button>
       </div>`;
   });
 }
-function del(id){
-  notes=notes.filter(n=>n.id!==id);
-  localStorage.setItem('notes',JSON.stringify(notes));
-  render();
+
+function copy(t){
+  navigator.clipboard.writeText(t);
 }
+
+function openLink(u){
+  window.open(u,"_blank");
+}
+
 render();
 </script>
 </body>
