--- a/note.html
+++ b/note.html
@@ -13,9 +13,9 @@ body{
 }
 .wrap{
   max-width:720px;
-  margin:20px auto;
+  margin:12px auto;
   background:#fff;
-  border-radius:8px;
+  border-radius:10px;
   box-shadow:0 2px 10px rgba(0,0,0,.1);
   overflow:hidden;
 }
@@ -25,11 +25,12 @@ body{
 }
 .header input{
   width:100%;
-  font-size:18px;
-  padding:10px;
+  font-size:16px;
+  padding:10px 12px;
   border:1px solid #ccc;
-  border-radius:6px;
+  border-radius:8px;
 }
+
 .tabs{
   display:flex;
   justify-content:flex-end;
@@ -47,77 +48,106 @@ body{
   color:#dc2626;
   border-bottom:2px solid #dc2626;
 }
+
 .toolbar{
   display:flex;
-  gap:10px;
-  padding:8px 10px;
+  gap:6px;
+  padding:8px;
   border-bottom:1px solid #ddd;
+  overflow-x:auto;
 }
 .toolbar button{
   background:none;
   border:none;
   padding:6px;
   border-radius:6px;
-  cursor:pointer;
 }
-.toolbar button:hover{
-  background:#e5e7eb;
-}
+.toolbar button:hover{background:#e5e7eb}
 .toolbar svg{
   width:20px;
   height:20px;
   stroke:#111;
 }
+
 .editor{
-  min-height:320px;
-  padding:14px;
+  min-height:260px;
+  padding:12px;
   outline:none;
   border:2px solid #2563eb;
   margin:10px;
+  border-radius:8px;
+}
+.editor img{
+  max-width:100%;
+  height:auto;
+  display:block;
+  margin:8px auto;
   border-radius:6px;
 }
+
 textarea{
   display:none;
   width:calc(100% - 20px);
-  height:320px;
+  height:260px;
   margin:10px;
+  border-radius:8px;
+  padding:12px;
 }
+
 .footer{
   display:flex;
-  justify-content:center;
   gap:10px;
   padding:12px;
   border-top:1px solid #ddd;
 }
-select,button.publish{
-  padding:8px 14px;
-  border-radius:6px;
-  border:none;
+.footer select,.footer button{
+  flex:1;
+  padding:10px;
+  border-radius:8px;
+  border:1px solid #ccc;
   font-weight:600;
 }
 button.publish{
   background:#dc2626;
   color:#fff;
+  border:none;
 }
+
 .section{
   max-width:720px;
-  margin:20px auto;
+  margin:16px auto;
+  padding:0 6px;
 }
 .card{
   background:#fff;
   padding:12px;
-  border-radius:8px;
+  border-radius:10px;
   margin-bottom:10px;
   box-shadow:0 2px 8px rgba(0,0,0,.08);
+  display:flex;
+  justify-content:space-between;
+  gap:10px;
+  align-items:center;
 }
-.card a{
-  color:#2563eb;
-  text-decoration:none;
+.card span{
   word-break:break-all;
+  font-size:13px;
+}
+.card button{
+  padding:6px 10px;
+  border-radius:6px;
+  border:1px solid #ccc;
+  background:#f9fafb;
+  font-weight:600;
+}
+.actions{
+  display:flex;
+  gap:6px;
 }
 small{color:#666}
 </style>
 </head>
+
 <body>
 
 <div class="wrap">
@@ -131,16 +161,14 @@ small{color:#666}
   </div>
 
   <div class="toolbar">
-    <!-- Bold -->
-    <button onclick="cmd('bold')" title="Bold">
+    <button onclick="cmd('bold')">
       <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
         <path d="M6 4h7a4 4 0 0 1 0 8H6z"/>
         <path d="M6 12h8a4 4 0 0 1 0 8H6z"/>
       </svg>
     </button>
 
-    <!-- Align -->
-    <button onclick="cmd('justifyLeft')" title="Align Left">
+    <button onclick="cmd('justifyLeft')">
       <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
         <line x1="3" y1="6" x2="21" y2="6"/>
         <line x1="3" y1="12" x2="15" y2="12"/>
@@ -148,8 +176,7 @@ small{color:#666}
       </svg>
     </button>
 
-    <!-- Image -->
-    <button onclick="insertImage()" title="Image">
+    <button onclick="pickImage()">
       <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
         <rect x="3" y="3" width="18" height="18" rx="2"/>
         <circle cx="8" cy="8" r="2"/>
@@ -157,16 +184,7 @@ small{color:#666}
       </svg>
     </button>
 
-    <!-- Link -->
-    <button onclick="insertLink()" title="Link">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-        <path d="M10 13a5 5 0 0 1 0-7l2-2a5 5 0 0 1 7 7l-1 1"/>
-        <path d="M14 11a5 5 0 0 1 0 7l-2 2a5 5 0 0 1-7-7l1-1"/>
-      </svg>
-    </button>
-
-    <!-- List -->
-    <button onclick="cmd('insertUnorderedList')" title="List">
+    <button onclick="cmd('insertUnorderedList')">
       <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
         <line x1="8" y1="6" x2="21" y2="6"/>
         <line x1="8" y1="12" x2="21" y2="12"/>
@@ -177,20 +195,10 @@ small{color:#666}
       </svg>
     </button>
 
-    <!-- Undo -->
-    <button onclick="cmd('undo')" title="Undo">
+    <button onclick="cmd('undo')">
       <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
         <path d="M9 14l-4-4 4-4"/>
         <path d="M20 20a8 8 0 0 0-8-8H5"/>
-      </svg>
-    </button>
-
-    <!-- More -->
-    <button title="More">
-      <svg viewBox="0 0 24 24" fill="currentColor">
-        <circle cx="5" cy="12" r="2"/>
-        <circle cx="12" cy="12" r="2"/>
-        <circle cx="19" cy="12" r="2"/>
       </svg>
     </button>
   </div>
@@ -199,8 +207,9 @@ small{color:#666}
   <textarea id="html"></textarea>
 
   <div class="footer">
-    <select>
-      <option>Public</option>
+    <select id="visibility">
+      <option value="public">Public</option>
+      <option value="private">Private</option>
     </select>
     <button class="publish" onclick="publish()">Publish</button>
   </div>
@@ -216,18 +225,25 @@ small{color:#666}
   <div id="history"></div>
 </div>
 
+<input type="file" id="imgPick" accept="image/*" hidden>
+
 <script>
 let notes = JSON.parse(localStorage.getItem('notes') || '[]');
+let tempLink = null;
 
 function cmd(c){document.execCommand(c,false,null)}
-function insertLink(){
-  const u=prompt('URL');
-  if(u) document.execCommand('createLink',false,u);
+
+function pickImage(){
+  imgPick.click();
 }
-function insertImage(){
-  const u=prompt('Image URL');
-  if(u) document.execCommand('insertImage',false,u);
+imgPick.onchange=e=>{
+  const f=e.target.files[0];
+  if(!f) return;
+  const r=new FileReader();
+  r.onload=()=>document.execCommand('insertImage',false,r.result);
+  r.readAsDataURL(f);
 }
+
 function showHTML(){
   html.value=editor.innerHTML;
   editor.style.display='none';
@@ -245,29 +261,64 @@ function setTab(i){
     t.classList.toggle('active',n===i);
   });
 }
+
+function genID(){
+  return Math.random().toString(36).slice(2,7);
+}
+
 function publish(){
-  notes.unshift({
-    id:Date.now(),
+  const id=genID();
+  const note={
+    id,
     title:title.value||'Untitled',
     content:editor.innerHTML,
-    time:new Date().toLocaleString()
-  });
+    time:new Date().toLocaleString(),
+    visibility:visibility.value
+  };
+  notes.unshift(note);
   localStorage.setItem('notes',JSON.stringify(notes));
+
+  tempLink=`v/view.html?id=${id}`;
   render();
 }
+
 function render(){
   links.innerHTML='';
   history.innerHTML='';
+
+  if(tempLink){
+    links.innerHTML=`
+      <div class="card">
+        <span>${tempLink}</span>
+        <button onclick="navigator.clipboard.writeText('${tempLink}')">Salin</button>
+      </div>`;
+  }
+
   notes.forEach(n=>{
-    const link=`v/view.html?id=${n.id}`;
-    links.innerHTML+=`
-      <div class="card"><a href="${link}" target="_blank">${link}</a></div>`;
     history.innerHTML+=`
-      <div class="card"><b>${n.title}</b><br><small>${n.time}</small></div>`;
+      <div class="card">
+        <div>
+          <b>${n.title}</b><br>
+          <small>${n.time}</small>
+        </div>
+        <div class="actions">
+          <button onclick="window.open('v/view.html?id=${n.id}')">Lihat</button>
+          <button onclick="loadEdit('${n.id}')">Edit</button>
+        </div>
+      </div>`;
   });
 }
+
+function loadEdit(id){
+  const n=notes.find(x=>x.id===id);
+  if(!n) return;
+  title.value=n.title;
+  editor.innerHTML=n.content;
+  tempLink=null;
+  render();
+}
+
 render();
 </script>
-
 </body>
 </html>
