--- a/note.html
+++ b/note.html
@@ -185,7 +185,7 @@ function publish(){
   });
   localStorage.setItem('notes',JSON.stringify(notes));
 
-  tempLink=`narapoi.pages.dev/v/view.html?id=${id}`;
+  tempLink=`https://narapoi.pages.dev/v/view.html?id=${id}`;
   render();
 }
 
