--- a/v/view.html
+++ b/v/view.html
@@ -6,113 +6,138 @@
 <title>View Note</title>
 
 <style>
+*{box-sizing:border-box}
 body{
   margin:0;
-  background:#f3f4f6;
-  font-family:system-ui,Arial;
+  background:#0b0d12;
+  color:#e5e7eb;
+  font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;
 }
 .wrap{
-  max-width:720px;
-  margin:14px auto;
-  background:#fff;
-  border-radius:10px;
-  box-shadow:0 2px 10px rgba(0,0,0,.1);
-  overflow:hidden;
-}
-.header{
+  max-width:760px;
+  margin:16px auto;
   padding:14px;
-  border-bottom:1px solid #e5e7eb;
 }
-.header h1{
+.card{
+  background:#111827;
+  border-radius:10px;
+  padding:16px;
+  box-shadow:0 10px 30px rgba(0,0,0,.35);
+}
+h1{
+  font-size:22px;
   margin:0 0 6px;
-  font-size:20px;
+  word-break:break-word;
 }
 .meta{
   display:flex;
-  gap:14px;
+  gap:12px;
   font-size:13px;
-  color:#555;
-  flex-wrap:wrap;
+  color:#9ca3af;
+  margin-bottom:14px;
 }
 .content{
-  padding:14px;
+  line-height:1.6;
+  word-break:break-word;
 }
+
+/* 🔥 FIX CLICK */
+.content,
+.content *{
+  pointer-events:auto !important;
+}
+
+/* IMAGE */
 .content img{
   max-width:100%;
   height:auto;
-  display:block;
-  margin:10px auto;
   border-radius:8px;
+  margin:10px 0;
 }
+
+/* SHARE */
+.share{
+  display:flex;
+  gap:10px;
+  margin-top:16px;
+  flex-wrap:wrap;
+}
+.share button{
+  flex:1;
+  min-width:90px;
+  padding:10px;
+  border:none;
+  border-radius:8px;
+  background:#1f2937;
+  color:#e5e7eb;
+  font-weight:600;
+  cursor:pointer;
+}
+.share button:hover{
+  background:#374151;
+}
+
+/* PASSWORD */
 .lock{
-  padding:20px;
   text-align:center;
+  padding:30px 10px;
 }
 .lock input{
   width:100%;
   padding:10px;
   border-radius:8px;
-  border:1px solid #ccc;
-  margin-top:10px;
+  border:none;
+  margin:10px 0;
 }
 .lock button{
-  margin-top:10px;
-  padding:10px;
-  width:100%;
-  border-radius:8px;
+  padding:10px 16px;
   border:none;
-  background:#dc2626;
+  border-radius:8px;
+  background:#2563eb;
   color:#fff;
   font-weight:600;
 }
-.share{
+
+/* FOOT */
+.footer{
+  margin-top:16px;
   display:flex;
-  gap:8px;
-  padding:12px;
-  border-top:1px solid #e5e7eb;
-  flex-wrap:wrap;
-}
-.share button{
-  flex:1;
-  padding:10px;
-  border-radius:8px;
-  border:1px solid #ccc;
-  background:#f9fafb;
-  font-weight:600;
+  justify-content:space-between;
+  font-size:13px;
+  color:#9ca3af;
 }
 </style>
 </head>
 <body>
 
-<div class="wrap" id="app" style="display:none">
-  <div class="header">
+<div class="wrap">
+  <div class="card" id="app" style="display:none">
     <h1 id="title"></h1>
     <div class="meta">
       <span id="time"></span>
       <span>Views: <b id="views">0</b></span>
       <span>Online: <b id="online">0</b></span>
     </div>
+    <div id="content" class="content"></div>
+
+    <div class="share">
+      <button onclick="shareWA()">WhatsApp</button>
+      <button onclick="shareTG()">Telegram</button>
+      <button onclick="copyLink()">Salin</button>
+    </div>
   </div>
 
-  <div class="content" id="content"></div>
-
-  <div class="share">
-    <button onclick="shareWA()">WhatsApp</button>
-    <button onclick="shareTG()">Telegram</button>
-    <button onclick="shareFB()">Facebook</button>
-    <button onclick="copyLink()">Salin Link</button>
+  <div class="card lock" id="lock" style="display:none">
+    <h2>Private Note</h2>
+    <input id="pass" type="password" placeholder="Password">
+    <button onclick="unlock()">Buka</button>
   </div>
 </div>
 
-<div class="wrap lock" id="lock" style="display:none">
-  <h3>Note Terkunci</h3>
-  <input type="password" id="pass" placeholder="Masukkan password">
-  <button onclick="unlock()">Buka Note</button>
-</div>
-
+<!-- FIREBASE -->
 <script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-import { getDatabase, ref, get, set, onValue, onDisconnect, increment } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+import { getDatabase, ref, get, runTransaction, onDisconnect, set, onValue } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
 
 const firebaseConfig = {
   apiKey: "AIzaSyC4KJsPLfoEiZSKQUZHrGzZh6-Fv_0Q7P0",
@@ -124,68 +149,76 @@ const firebaseConfig = {
   appId: "1:998762153750:web:7113cd0bba422204fa7237"
 };
 
-const app = initializeApp(firebaseConfig);
-const db = getDatabase(app);
+const appFB = initializeApp(firebaseConfig);
+const db = getDatabase(appFB);
 
 const id = new URLSearchParams(location.search).get('id');
-const notes = JSON.parse(localStorage.getItem('notes') || '[]');
-const note = notes.find(n=>n.id===id);
+const noteRef = ref(db, 'notes/'+id);
 
-if(!note){
-  document.body.innerHTML='<h2 style="text-align:center">Note tidak ditemukan</h2>';
-  throw '';
-}
+let currentNote=null;
 
-title.textContent = note.title;
-time.textContent = note.time;
-content.innerHTML = note.content;
+get(noteRef).then(snap=>{
+  if(!snap.exists()){
+    document.body.innerHTML='<h2 style="text-align:center">Note tidak ditemukan</h2>';
+    return;
+  }
+  currentNote=snap.val();
 
-if(note.visibility === 'private'){
-  appBox(false);
-}else{
-  appBox(true);
-}
+  if(currentNote.visibility==='private'){
+    lock.style.display='block';
+  }else{
+    showNote();
+  }
+});
 
-function appBox(show){
-  document.getElementById('app').style.display = show?'block':'none';
-  document.getElementById('lock').style.display = show?'none':'block';
-}
-
-window.unlock = ()=>{
-  if(pass.value === note.password){
-    appBox(true);
-    initFirebase();
+window.unlock=()=>{
+  if(pass.value===currentNote.password){
+    showNote();
   }else{
     alert('Password salah');
   }
 };
 
-function initFirebase(){
-  const viewRef = ref(db, `views/${id}`);
-  set(viewRef, increment(1));
+function showNote(){
+  lock.style.display='none';
+  app.style.display='block';
 
-  onValue(viewRef, s=>{
-    views.textContent = s.val() || 0;
-  });
+  title.textContent=currentNote.title;
+  time.textContent=currentNote.time;
+  content.innerHTML=currentNote.content;
 
-  const userId = Math.random().toString(36).slice(2);
-  const onlineRef = ref(db, `online/${id}/${userId}`);
-  set(onlineRef, true);
-  onDisconnect(onlineRef).remove();
+  initViews();
+  initOnline();
+}
 
-  onValue(ref(db, `online/${id}`), s=>{
-    online.textContent = s.exists() ? Object.keys(s.val()).length : 0;
+/* VIEWS */
+function initViews(){
+  const vRef=ref(db,'views/'+id);
+  runTransaction(vRef,(n)=>(n||0)+1);
+  onValue(vRef,s=>views.textContent=s.val()||0);
+}
+
+/* ONLINE */
+function initOnline(){
+  const oRef=ref(db,'online/'+id+'/'+Math.random().toString(36).slice(2));
+  set(oRef,1);
+  onDisconnect(oRef).remove();
+  onValue(ref(db,'online/'+id),s=>{
+    online.textContent=s.exists()?Object.keys(s.val()).length:0;
   });
 }
 
-if(note.visibility === 'public'){
-  initFirebase();
-}
-
-window.shareWA=()=>window.open(`https://wa.me/?text=${encodeURIComponent(location.href)}`);
-window.shareTG=()=>window.open(`https://t.me/share/url?url=${encodeURIComponent(location.href)}`);
-window.shareFB=()=>window.open(`https://www.facebook.com/sharer/sharer.php?u=${encodeURIComponent(location.href)}`);
-window.copyLink=()=>navigator.clipboard.writeText(location.href);
+/* SHARE */
+window.copyLink=()=>{
+  navigator.clipboard.writeText(location.href);
+  alert('Link disalin');
+};
+window.shareWA=()=>{
+  open(`https://wa.me/?text=${encodeURIComponent(location.href)}`);
+};
+window.shareTG=()=>{
+  open(`https://t.me/share/url?url=${encodeURIComponent(location.href)}`);
+};
 </script>
 
 </body>
